Fixing alignment

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -44,4 +44,10 @@
       &:hover 
         color: #fff
         box-shadow: inset 0 -30px 0 -1px $accentColor;
+    ol, ul 
+      padding-left: 1.7em
+    
+    h1, h2, h3, h4, h5, h6
+      a 
+        padding-right: 0px
   
